[package]
name = "ludo_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
enum-iterator = "1.1.1"
enum-map = "2.3.0"
extend = "1.1.2"
itertools = "0.10.3"
lazy_static = "*"
rand = "0.8.5"
serde = { version = "1.0.137", features = ["derive"] }
